--- a/0511-CommandLineUtilites.Rmd
+++ b/0511-CommandLineUtilites.Rmd
@@ -19,6 +19,20 @@ donkey createcar --path <dir> [--overwrite] [--template <donkey2>]
 * It uses the `--path` as the destination dir to create. If `.py` files exist there, it will not overwrite them, unless the optional `--overwrite` is used.
 * The optional `--template` will specify the template file to start from. For a list of templates, see the `donkeycar/templates` dir
 
+## Update Car
+
+donkey update from your ~/mycar dir works the same as donkey createcar --overwrite --path=... 
+
+```bash
+donkey update # from your ~/mycar dir
+createcar --overwrite --path=... 
+
+
+```
+
+
+
+
 ## Find Car
 
 This command attempts to locate your car on the local network using nmap.
